--- a/configuration.properties
+++ b/configuration.properties
@@ -1,11 +1,9 @@
-#Sat Aug 17 18:26:21 TRT 2024
+#Sat Aug 17 20:41:46 TRT 2024
 browser=chrome
-email=roselle.jacobs@gmail.com
-firstName=Natasha
-lastName=Hagenes
-password=9xxa7k2hbvn8
+email=roman.schumm@gmail.com
+firstName=Mitsuko
+lastName=Zulauf
+password=f5r6epuo0uri
 testerName=Ece
 url=https\://testotomasyonu.com/
-
-
-xpath = //input[@value='Natasha']
+xpath=//input[@value\='Natasha']
