--- a/configuration.properties
+++ b/configuration.properties
@@ -1,9 +1,8 @@
-#Sat Aug 17 20:41:46 TRT 2024
+#Thu Aug 22 21:38:33 TRT 2024
 browser=chrome
-email=roman.schumm@gmail.com
-firstName=Mitsuko
-lastName=Zulauf
-password=f5r6epuo0uri
+email=shakia.wiza@gmail.com
+firstName=Arnita
+lastName=Corkery
+password=sy2gyr7tssa1a
 testerName=Ece
 url=https\://testotomasyonu.com/
-xpath=//input[@value\='Natasha']
