--- a/configuration.properties
+++ b/configuration.properties
@@ -1,9 +1,14 @@
-#Sat Aug 17 20:41:46 TRT 2024
-browser=chrome
-email=roman.schumm@gmail.com
-firstName=Mitsuko
-lastName=Zulauf
-password=f5r6epuo0uri
+#Tue Aug 27 15:32:45 TRT 2024
+address=123 street no\:5
+browser=browser
+city=Urla
+country=Turkey
+email=johnathan.ratke@gmail.com
+firstName=Joey
+lastName=Cole
+password=3ym3k4rnc3pfpv
+phone=+90567
+postcode=35240
+state=izmir Province
 testerName=Ece
 url=https\://testotomasyonu.com/
-xpath=//input[@value\='Natasha']
